# rpg_app

./: .env.example  .gitignore  OVERVIEW.md  README.md  app.py  character.py  database.py  engine.py  game_data.py  game_time.py  prompts.py  pyproject.toml  rpg_app_claude_code_plan.md  voice.py
ai/: engine.py  voice.py
ai/prompts/: __init__.py  context.py
game/: character.py  dice.py  game_data.py
prompts/: __init__.py  context.py  narrator.py  structured.py
storage/: database.py
tests/: test_character.py  test_dice.py  test_game_data.py  test_game_time.py
