[project]
name = "rpg-app"
version = "0.1.0"
description = "Pathfinder 2e storytelling app for kids powered by Claude and OpenAI TTS"
authors = [
    {name = "Tim Gushue", email = "gushue.tim@gmail.com"}
]
requires-python = "^3.11"
dependencies = [
    "streamlit (>=1.55.0,<2.0.0)",
    "anthropic (>=0.86.0,<1.0.0)",
    "openai (>=1.0.0,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
